[metadata]
# replace with your username:
name = example-pkg-bethfischi
version = 0.0.1
author = Beth Fischi
author_email = bfischi@gmail.com
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bfischi/packaging_tutorial
project_urls =
    Bug Tracker = https://github.com/bfischi/packaging_tutorial/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src
